Update Dockerfile due to Coding Conventions

--- a/applications/SpringBootHelloWorld/Dockerfile
+++ b/applications/SpringBootHelloWorld/Dockerfile
@@ -5,7 +5,7 @@ FROM openjdk:17
 EXPOSE 8080
 
 # add jar file (left: position of your jar, right: name of the image, which is called in the entry)
-ADD target/SpringBootHelloWorld-0.0.1-SNAPSHOT.jar helloWorld.jar
+COPY target/SpringBootHelloWorld-0.0.1-SNAPSHOT.jar helloWorld.jar
 
 # entry, which will be worked out later
 ENTRYPOINT ["java", "-jar", "helloWorld.jar"]
