--- a/applications/SpringBootWeather/src/main/resources/application.properties
+++ b/applications/SpringBootWeather/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/test_db
+spring.datasource.username=springuser
+spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
