--- a/applications/SpringBootWeather/docker-compose.yml
+++ b/applications/SpringBootWeather/docker-compose.yml
@@ -3,10 +3,22 @@ version: '3.5'
 services:
   db:
     image: postgres:12
+    container_name: db
     restart: always
     environment:
       POSTGRES_USER: springuser
       POSTGRES_PASSWORD: password
-      POSTGRES_DB: test_db
+      POSTGRES_DB: weather_db
     ports:
       - "5432:5432"
+  app:
+    depends_on:
+     - db
+    build: .
+    ports:
+     - "8081:8080"
+    environment:
+      SPRING_DATASOURCE_URL : jdbc:postgresql://db:5432/weather_db
+volumes:
+  postgre_db:
+    driver: local
