--- a/applications/SpringBootWeather/docker-compose.yml
+++ b/applications/SpringBootWeather/docker-compose.yml
@@ -3,22 +3,22 @@ version: '3.5'
 services:
   db:
     image: postgres:12
-    container_name: db
+    container_name: ${DB_CONTAINER_NAME}
     restart: always
     environment:
-      POSTGRES_USER: springuser
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: weather_db
+      POSTGRES_USER: ${DB_USERNAME}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_TITLE}
     ports:
-      - "5432:5432"
+      - "${DB_LOCAL_PORT}:${DB_DOCKER_PORT}"
   app:
     depends_on:
      - db
     build: .
     ports:
-     - "8081:8080"
+     - "${APP_LOCAL_PORT}:${APP_DOCKER_PORT}"
     environment:
-      SPRING_DATASOURCE_URL : jdbc:postgresql://db:5432/weather_db
+      SPRING_DATASOURCE_URL : jdbc:postgresql://db:${DB_DOCKER_PORT}/${DB_TITLE}
 volumes:
   postgre_db:
     driver: local
