--- a/applications/SpringBootWeather/Dockerfile
+++ b/applications/SpringBootWeather/Dockerfile
@@ -4,7 +4,7 @@ FROM openjdk:17
 # port
 EXPOSE 8080
 
-# jat file
+# jar file
 COPY target/SpringBootWeather-0.0.1-SNAPSHOT.jar springbootweather.jar
 
 # entry
