--- a/applications/SpringBootWeather/weather_app_service.yaml
+++ b/applications/SpringBootWeather/weather_app_service.yaml
@@ -5,9 +5,11 @@ metadata:
   labels:
     springbootweather: web
   creationTimestamp: null
+  # name of service:
   name: app
 spec:
   ports:
+    # port forwarding of the service
     - name: "8081"
       port: 8081
       targetPort: 8080
