--- a/applications/SpringBootWeather/weather_db_service.yaml
+++ b/applications/SpringBootWeather/weather_db_service.yaml
@@ -5,9 +5,11 @@ metadata:
   creationTimestamp: null
   labels:
     db: db
+  # name of service
   name: db
 spec:
   ports:
+    # port forwarding for the service
     - name: "5432"
       port: 5432
       targetPort: 5432
